--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
     "dotenv": "^16.5.0",
     "fluent-ffmpeg": "^2.1.3",
+    "form-data": "^4.0.3",
     "fs": "^0.0.1-security",
     "instagram-private-api": "^1.46.1"
   }
