--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,57 @@
-.env*
-/node_modules
-instagram_session.json
+# Environment variables (contains sensitive API keys)
+.env
+
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Working directory - videos and temporary files
+reels/*.mp4
+reels/*_converted.mp4
+reels/debug_*.txt
+
+# Keep captions.json (contains processed data but no sensitive info)
+# reels/captions.json
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
