--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node downloadWithPublicUpload.js",
+    "start:clean": "node downloadWithPublicUpload.js --cleanup",
+    "check": "node check-setup.js",
+    "setup": "npm install && node check-setup.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
